# pypi

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
src/pi/: __init__.py  env.py
src/pi/agent/: __init__.py  agent.py  core.py  registry.py  tools.py  types.py
src/pi/agent/tools/: __init__.py
src/pi/ai/: __init__.py  models.py  stream.py  types.py
src/pi/ai/providers/: __init__.py  anthropic.py  base.py  converters.py  converters_anthropic.py  converters_google.py  dummy.py  google.py  openai.py  zhipu.py
src/pi/cli/: __init__.py  args.py  main.py
src/pi/cli/modes/: __init__.py  print_mode.py
src/pi/cli/tools/: __init__.py  bash.py  edit.py  find.py  glob_tool.py  grep_tool.py  ls.py  path_utils.py  read.py  truncate.py  write.py
src/pi/session/: __init__.py  agent_session.py  config.py  manager.py  settings.py  types.py
src/pi/tui/: __init__.py  app.py  autocomplete.py  keybindings.py  types.py
src/pi/tui/commands/: __init__.py  builtin.py  registry.py
src/pi/tui/components/: __init__.py  base.py  markdown.py  message.py
tests/: conftest.py
tests/test_agent/: test_agent.py  test_agent_types.py  test_core.py  test_registry.py  test_tools.py
tests/test_ai/: test_anthropic_provider.py  test_converters_anthropic.py  test_converters_google.py  test_google_provider.py  test_openai_provider.py  test_providers.py  test_types.py
tests/test_cli/: __init__.py  test_tools.py
tests/test_tui/: __init__.py  test_builtin.py  test_commands.py  test_markdown.py  test_message.py
